--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -3,6 +3,8 @@
 @import './layout/index.scss';
 @import './nav-bar/index.scss';
 @import './lightbulb-page/index.scss';
+@import 'recipes.scss';
+@import 'add_food.scss';
 
 html, body {
   padding: 0;
