--- a/src/stylesheets/lightbulb-page/index.scss
+++ b/src/stylesheets/lightbulb-page/index.scss
@@ -1,1 +1,6 @@
 @import './lightbulb-page.scss';
+body {
+    background-color: #e5e0d9; // Puedes usar cualquier color hexadecimal
+    
+    // #ffebeb
+}
