--- a/src/stylesheets/nav-bar/nav-bar__link.scss
+++ b/src/stylesheets/nav-bar/nav-bar__link.scss
@@ -1,11 +1,79 @@
-.nav-bar__link {
-  display: inline-block;
-  margin-right: 15px;
-  padding: 8px;
-  color: rgb(4, 100, 253);
 
-  &--active {
-    background: #222;
-    color: white;
+// .nav-bar__links {  /* Contenedor para agrupar los enlaces */
+//   display: flex;
+//   align-items: center;
+// }
+
+// .nav-bar__link {
+//   text-decoration: none;
+//   color: #333; /* Color de texto oscuro */
+//   margin-left: 25px; /* Espacio entre enlaces */
+//   padding-bottom: 5px; // Espacio para la línea inferior
+//   font-weight: 500;
+//   border-bottom: 2px solid transparent; // Línea inferior transparente por defecto
+
+
+//   &:hover,
+//   &.active { // Subrayado al pasar el ratón o en estado activo
+//     border-bottom: 2px solid #e76f51; // Línea inferior naranja
+//     color: #e76f51; // Cambia de color al pasar el ratón o estar activo
+//   }
+
+
+// }
+
+
+
+// .nav-bar__link--button {
+//   background-color: #ff6700; /* Color naranja del botón */
+//   color: white;
+//   padding: 8px 16px;
+//   border-radius: 20px;
+//   margin-left: 20px;
+//   border: none; /* Quita el borde por defecto */
+
+//   &:hover { /* Efecto hover para el botón */
+//       background-color: darken(#ff6700, 10%); // Oscurece el color al pasar el ratón
+//   }
+// }
+.nav-bar__links {
+  display: flex;
+  align-items: center;
+}
+
+
+.nav-bar__link {
+  text-decoration: none;
+  color: #333;
+  margin-left: 25px;
+  padding-bottom: 5px;
+  font-weight: 500;
+  border-bottom: 2px solid transparent; // Línea inferior transparente por defecto
+
+  &:hover,
+  &.nav-bar__link--active { // Enlace activo o al pasar el mouse
+      border-bottom: 2px solid #e76f51;
+      color: #e76f51;
+  }
+}
+
+
+
+.create-menu-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ff6700;
+  color: white;
+  width: 100px;
+  height: 40px;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 0.9em;
+  margin-left: 20px;
+  transition: background-color 0.3s ease;
+
+  &:hover {
+      background-color: darken(#ff6700, 10%);
   }
 }
