--- a/src/stylesheets/layout/index.scss
+++ b/src/stylesheets/layout/index.scss
@@ -1,3 +1,6 @@
 @import './layout.scss';
 @import './layout__page.scss';
 @import './layout__title.scss';
+body {
+    background-color: #ffffff; // Puedes usar cualquier color hexadecimal
+}
