Create week plan table

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -5,6 +5,7 @@
 @import './lightbulb-page/index.scss';
 @import 'recipes.scss';
 @import 'add_food.scss';
+@import 'menus.scss';
 
 html, body {
   padding: 0;
