--- a/src/stylesheets/tables/menus.scss
+++ b/src/stylesheets/tables/menus.scss
@@ -12,10 +12,10 @@
 }
 
 
-.button-agregar-comida{
+.button-Editar-comida{
     background-color: #e76f51; /* Cambia el color si prefieres */
     color: white;
-    padding: 10px 20px;
+    padding: 3px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
