--- a/src/stylesheets/tables/recipes.scss
+++ b/src/stylesheets/tables/recipes.scss
@@ -24,6 +24,19 @@
     text-decoration: none;
 
 }
+.button-editar-comida{
+    background-color: #e76f51; /* Cambia el color si prefieres */
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 20px;
+    text-decoration: none;
+
+}
+
 
 .link-agregar-comida{
     color: white;
