--- a/src/stylesheets/tables/menus.scss
+++ b/src/stylesheets/tables/menus.scss
@@ -24,3 +24,11 @@
     text-decoration: none;
 
 }
+.edit-select {
+    display: block;
+    margin-top: 5px;
+    padding: 5px;
+    border: 1px solid #000000;
+    border-radius: 4px;
+    background-color: white;
+}
