--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -5,6 +5,7 @@
 @import './lightbulb-page/index.scss';
 @import './tables/index.scss';
 @import 'add_food.scss';
+@import './home/home.scss';
 
 html, body {
   padding: 0;
