--- a/src/stylesheets/tables/index.scss
+++ b/src/stylesheets/tables/index.scss
@@ -1,3 +1,4 @@
 @import './menus.scss';
 @import './recipes.scss';
-@import './ingredients.scss'
+@import './ingredients.scss';
+@import './Supermarket.scss';
