--- a/src/stylesheets/nav-bar/nav-bar.scss
+++ b/src/stylesheets/nav-bar/nav-bar.scss
@@ -1,8 +1,3 @@
-// .nav-bar {
-//   display: flex;
-//   background-color: #ada9a9;
-//   padding-left: 20px;
-// }
 .nav-bar {
   display: flex;
   justify-content: space-between;
@@ -17,10 +12,9 @@
 }
 
 .nav-bar__logo {
-  text-decoration: none; /* Elimina el subrayado */
-  color: inherit;       /* Hereda el color del elemento padre (o define un color específico) */
-  margin-right: 1130px;
-  &:visited{ /* cuando ha sido visitado */
+  text-decoration: none; 
+  color: inherit;      
+  &:visited{ 
     color: inherit;
   }
 
@@ -29,14 +23,14 @@
   &:active,
   &.active {
 
-    color: inherit; /* cuando se pasa el mouse encima */
+    color: inherit; 
 
   }
 }
 
 
-.nav-bar__logo-icon { /* Para el punto naranja */
-  color: #ff6700; /* O el color que quieras */
+.nav-bar__logo-icon { 
+  color: #ff6700; 
   margin-right: 5px; 
 }
 
